Revert background image, issues with visibility

--- a/css/simple-sidebar.css
+++ b/css/simple-sidebar.css
@@ -76,8 +76,7 @@
 }
 
 body {
-    background: url('bg4.jpg');
-    background-position: 25% 10%;
+    background-color: rgba(0,0,0,.9);
 }
 
 #wrapper {
